<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>run.mone</groupId>
    <artifactId>jcommon</artifactId>
    <version>1.4-jdk21-SNAPSHOT</version>
  </parent>
  <artifactId>rcurve</artifactId>
  <version>1.4.2-jdk21-SNAPSHOT</version>
  <dependencies>
    <dependency>
      <groupId>run.mone</groupId>
      <artifactId>hera-trace</artifactId>
      <version>1.4-jdk21-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>io.protostuff</groupId>
      <artifactId>protostuff-core</artifactId>
      <version>1.8.0</version>
    </dependency>
    <dependency>
      <groupId>run.mone</groupId>
      <artifactId>api</artifactId>
      <version>1.4.1-jdk21-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>run.mone</groupId>
      <artifactId>rpc-codes</artifactId>
      <version>1.4-jdk21-SNAPSHOT</version>
      <exclusions>
        <exclusion>
          <artifactId>api</artifactId>
          <groupId>run.mone</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>run.mone</groupId>
      <artifactId>easy</artifactId>
      <version>1.4-jdk21-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>4.1.48.Final</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.1.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.1.2</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <compilerVersion>21</compilerVersion>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>